--- a/lnx_shell_gtfobins_bsidesmm-2019-samples.yml
+++ b/lnx_shell_gtfobins_bsidesmm-2019-samples.yml
@@ -32,6 +32,6 @@ detection:
     condition: keywords
 falsepositives:
     - GTFOBins Detection
-level: high
+level: low
 tags:
     - attack.gtfobins_commands_execution
