--- a/lnx_shell_gtfobins_command.yml
+++ b/lnx_shell_gtfobins_command.yml
@@ -20,6 +20,6 @@ detection:
     condition: keywords
 falsepositives:
     - GTFOBins Detection
-level: high
+level: low
 tags:
     - attack.gtfobins_command
