--- a/lnx_shell_gtfobins_commands_1.yml
+++ b/lnx_shell_gtfobins_commands_1.yml
@@ -31,7 +31,7 @@ detection:
         - 'arp -v -f * $'
     condition: keywords
 falsepositives:
-    - Administrative Control
+    - Administrative Controls
 level: low
 tags:
     - attack.gtfobins_commands_execution
