--- a/lnx_shell_gtfobins_commands_2.yml
+++ b/lnx_shell_gtfobins_commands_2.yml
@@ -32,8 +32,8 @@ detection:
         - 'diff --line-format=%L /dev/null'
     condition: keywords
 falsepositives:
-    - GTFOBins Detection
-level: high
+    - Administrative Controls
+level: low
 tags:
     - attack.gtfobins_commands_execution
     
